# serial-arbiter

./: Cargo.toml  README.md  justfile
examples/: auto_reconnect.rs  basic.rs  ndjsonrpc.rs
src/: connection.rs  lib.rs  serial_port.rs
