[package]
name = "serial-arbiter"
version = "0.2.0"
authors = ["Marcin Drzymala"]
license = "MIT"
keywords = ["serial", "serialport", "tty", "usb", "driver"]
categories = ["hardware-support", "network-programming", "os"]
description = "Serial Port Arbiter - Manages serial port access and ensures it recovers from failures"
repository = "https://github.com/drzymalanet/serial-arbiter"
readme = "README.md"
edition = "2021"

[dependencies]
crossbeam = { version = "0.8.4", default-features = false, features = ["std"] }
nix = { version = "0.29.0", default-features = false, features = [
    "fs",
    "poll",
] }
termios = "0.3.3"

[dev-dependencies]
serde_json = "1.0.140"
